@startuml class_overview
title Domain Model — Overview (PMS)

skinparam shadowing false
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classHeaderBackgroundColor #D6E4F0
skinparam packageBackgroundColor #EAF2FF
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
skinparam defaultFontSize 11
skinparam ArrowColor #444444
skinparam ArrowThickness 1.5
hide circle
hide empty members

package "Security" {
  class User {
    - email : String
    - active : boolean
    --
    + authenticate() : AccessToken
  }
  class Role {
    - name : String
  }
  class Permission {
    - code : String
    - module : String
  }
}

package "Resources" {
  class Resource {
    - fullName : String
    - profile : String
    --
    + computeAnnualCost() : double
  }
  class TccAnnuel {
    - year : int
    - annualChargedCost : double
  }
}

package "Project & Team" {
  class Project {
    - code : String
    - name : String
    - budget : double
    - status : ProjectStatus
    --
    + computeRemainingBudget() : double
  }
  enum ProjectStatus {
    DRAFT
    ACTIVE
    ON_HOLD
    COMPLETED
    CANCELLED
  }
  class TeamAssignment {
    - allocationRate : double
    - startDate : Date
  }
  class Livrable {
    - designation : String
    - delivered : boolean
  }
}

package "Billing & Contract" {
  class JalonFacturation {
    - percentage : double
    - amount : double
    - status : JalonStatut
    --
    + invoice() : void
  }
  class Paiement {
    - amount : double
    - paymentDate : Date
  }
  class Avenant {
    - amount : double
    --
    + computeRevisedBudget() : double
  }
  class Mission {
    - destination : String
    - totalCost : double
  }
  class Risk {
    - label : String
    - estimatedImpact : double
  }
}

package "Workload & KPI" {
  class PlanCharge {
    - month : Date
    - plannedDays : double
  }
  class ChargeReelle {
    - month : Date
    - actualDays : double
    - source : String
    --
    + validate() : void
  }
  class SnapshotKpi {
    - snapshotMonth : Date
    - eac : double
    - marginAtEac : double
    --
    + computeEac() : double
  }
}

' --- Security ---
User "1" --> "1" Role : has >
Role "1" --> "*" Permission : grants >

' --- Resources ---
Resource "0..1" --> "1" User : may be >
Resource "1" *-- "1..*" TccAnnuel : annual cost

' --- Project & Team ---
Project --> ProjectStatus : status >
Project "*" --> "1" User : director >
Project "*" --> "1..*" User : project managers >
Project "1" *-- "*" TeamAssignment
TeamAssignment "*" --> "1" Resource : concerns >
Project "1" *-- "*" Livrable

' --- Billing & Contract ---
Project "1" *-- "*" JalonFacturation : milestones >
JalonFacturation "1" *-- "*" Paiement : payments >
Project "1" *-- "*" Avenant
Project "1" *-- "*" Mission
Project "1" *-- "*" Risk

' --- Workload & KPI ---
Project "1" *-- "*" PlanCharge
PlanCharge "*" --> "1" Resource : concerns >
Project "1" *-- "*" ChargeReelle
ChargeReelle "*" --> "1" Resource : concerns >
Project "1" *-- "*" SnapshotKpi : KPI history >

@enduml
